--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-toast-message": "^2.2.0"
+    "react-native-sound": "^0.11.2",
+    "react-native-toast-message": "^2.2.0",
+    "expo-av": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
