--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.22",
+    "expo-av": "~14.0.6",
     "expo-dev-client": "~4.0.20",
     "expo-status-bar": "~1.12.1",
     "queue-promise": "^2.2.1",
@@ -24,8 +25,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sound": "^0.11.2",
-    "react-native-toast-message": "^2.2.0",
-    "expo-av": "~14.0.6"
+    "react-native-svg": "^15.6.0",
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
