--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "expo": "~51.0.22",
     "expo-av": "~14.0.6",
     "expo-dev-client": "~4.0.20",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "^17.0.1",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "queue-promise": "^2.2.1",
     "react": "18.2.0",
