--- a/app.json
+++ b/app.json
@@ -20,11 +20,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.indugalreact.indugalreact",
-      "versionCode": 1,
-      "permissions": [
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
-      ]
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -33,20 +29,6 @@
       "eas": {
         "projectId": "39b3ab15-015c-4aaa-bf79-edb150164834"
       }
-    },
-    "plugins": [
-      [
-        "expo-file-system",
-        {
-          "fileSystemSchemes": ["file", "content"]
-        }
-      ],
-      [
-        "expo-document-picker",
-        {
-          "iCloudContainerEnvironment": "Production"
-        }
-      ]
-    ]
+    }
   }
 }
